# cillio

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
addition/: Cargo.toml
addition/src/: bindings.rs  lib.rs
addition/wit/: world.wit
assets/: sum_graph.dot  sum_graph.json  sum_graph.yaml
assets/sum_graph/: sum_graph.dot
configs/: prometheus-config.yml  promtail-config.yml
crates/cillio-cli/: Cargo.toml
crates/cillio-cli/src/: main.rs
crates/cillio-config/src/: lib.rs
crates/cillio-core/: Cargo.toml
crates/cillio-core/src/: add.rs
crates/cillio-graph/: Cargo.toml
crates/cillio-graph-component/: Cargo.toml
crates/cillio-graph-component/src/: bindings.rs  lib.rs
crates/cillio-graph/src/: lib.rs
crates/cillio-nodes/cillio-addition-node/: Cargo.toml
crates/cillio-nodes/cillio-addition-node/src/: bindings.rs  lib.rs
crates/cillio-nodes/cillio-addition-node/wit/: world.wit
crates/cillio-nodes/cillio-emit-number-node/src/: bindings.rs  lib.rs
crates/cillio-nodes/cillio-emit-number-node/wit/: world.wit
crates/cillio-nodes/cillio-log-number-node/: Cargo.toml
crates/cillio-nodes/cillio-log-number-node/src/: bindings.rs  lib.rs
crates/cillio-nodes/cillio-log-number-node/wit/: world.wit
crates/cillio-runtime/: Cargo.toml
crates/cillio-runtime/src/: execution_plan.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/components/emit-number-node/: Cargo.toml
crates/components/emit-number-node/src/: bindings.rs
crates/components/emit-number-node/wit/: world.wit
crates/components/log-number-node/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: edge.rs  graph.rs  lib.rs  node.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: execution_plan.rs  lib.rs  runtime_data.rs
crates/tui/: Cargo.toml
crates/tui/src/: action.rs  app.rs  components.rs  config.rs  graph_renderer.rs  main.rs  reducer.rs  state.rs
crates/tui/src/components/: file_explorer.rs  fps.rs  graph_explorer.rs  home.rs
docs/: compute_graph.mmd  workspace.dsl  workspace.json
src/: add.rs  main.rs
wit/graph/: world.wit
wit/node/: world.wit
