workspace = { members = ["addition"] }
[package]
name = "cillio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.4", features = ["derive"] }
wasmtime = { version = "21.0.1", features = ["async"] }
wasmtime-wasi = "21.0.1"
