[workspace]
members = [ "crates/cillio-cli", "crates/cillio-config",
    "crates/cillio-core", "crates/cillio-graph", "crates/cillio-graph-component",
    "crates/cillio-nodes/*"
, "crates/cillio-runtime"]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'

[profile.release]
opt-level = 3
lto = true

[profile.release.package.cillio-emit-number-node]
codegen-units = 1
opt-level = "s"
debug = false
strip = true

[profile.release.package.cillio-addition-node]
codegen-units = 1
opt-level = "s"
debug = false
strip = true

[profile.release.package.cillio-log-number-node]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
