[workspace]
members = [
    "crates/cli",
    "crates/config",
    "crates/graph",
    "crates/components/*",
    "crates/runtime",
    "crates/tui", 
    "crates/observability",
]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'

[profile.release]
opt-level = 3
lto = true

[profile.release.package.cillio-emit-number-node]
codegen-units = 1
opt-level = "s"
debug = false
strip = true

[profile.release.package.cillio-addition-node]
codegen-units = 1
opt-level = "s"
debug = false
strip = true

[profile.release.package.cillio-log-number-node]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
