[package]
name = "cillio-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cillio-config = { path = "../cillio-config" }
cillio-graph = { path = "../cillio-graph" }
cillio-runtime = { path = "../cillio-runtime" }
thiserror = "1.0.61"
async-std = { version = "1.12.0", features = ["attributes"] }
anyhow = "1.0.86"
