[package]
name = "cillio-graph-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
wasm-compose = "0.209.1"
wasmparser = "0.209.1"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }
wit-component = "0.209.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "cillio:cillio-graph-component"

[package.metadata.component.target]
path = "../../wit/graph"

[package.metadata.component.dependencies]

