[package]
name = "cillio-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
cillio-config = { path = "../cillio-config" }
thiserror = "1.0.61"
wasmtime = { version = "21.0.1", features = ["async"] }
wasmtime-wasi = "21.0.1"
